# recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __main__.py
backend/jsons/: list.json  recognizeface.json
backend/module/: addface_.py  deleteface.py  face_recognition.py  listface.py  logger.py  recognizeface.py  s3bucket.py  test.py
backend/module/jsons/: list.json  recognizeface.json
